# kinect-relay

./: .gitignore  .gitmodules  KinectFrameManager.cpp  KinectFrameManager.h  KinectServer.cpp  KinectServer.h  KinectServerConnection.cpp  KinectServerConnection.h  Makefile  Makefile.am  Mutex.cpp  README.md  autogen.sh  configure.ac  kinect-relay.cbp  kinect-relay.cfg  kinect-relay.cpp  nopkg  package.sh
Beagleboard/: KinectProc.cpp  KinectProc.h  Server.cpp  Server.h  main.cpp
MagicBox/: KinectDataGenerator.cpp  KinectDataGenerator.h  ProcessedKinectData.h
Shared/: MagicBox.cpp  MagicBox.h  Mutex.h
cRIO/: Kinect.cpp  Stuffs.h
cRIO/Stuffs/: Stuffs.cbp  Stuffs.cpp
examples/: ObjectTracking.h
src/Client/: Kinect.cpp  Kinect.h  KinectTestProgram.cpp
src/Implementations/: Default.h  ObjectTracking.h  Rangefinder.h
src/MagicBox/: KinectDataGenerator.h
src/Server/: KinectFrameManager.cpp  KinectFrameManager.h  KinectServer.cpp  KinectServer.h  KinectServerConnection.cpp  KinectServerConnection.h  kinect-relay.cpp
src/Shared/: Mutex.cpp  Mutex.h
src/cRIO/: KinectSubsystem.cpp  KinectSubsystem.h  Stuffs.cpp
src/libfreenect/: libfreenect.hpp
