AUTOMAKE_OPTIONS = subdir-objects
ACLOCAL_AMFLAGS = ${ACLOCAL_FLAGS}

bin_PROGRAMS = hello
hello_SOURCES = src/Shared/Mutex.h src/Shared/Mutex.cpp src/Server/KinectFrameManager.h src/Server/KinectFrameManager.cpp src/Server/KinectServerConnection.h src/Server/KinectServerConnection.cpp src/Server/KinectServer.h src/Server/KinectServer.cpp src/Server/kinect-relay.cpp

dist_noinst_SCRIPTS = autogen.sh
